--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Number guessing game</h1>
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+    <p>A random number between 1 and 100 is been selected. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
     <div class="form">
         <label for="guessField">Enter a guess:</label>
         <input type="number" min="1" max="100" required id="guessField" class="guessField">
